--- a/.github/workflows/BuildandDeploy.yml
+++ b/.github/workflows/BuildandDeploy.yml
@@ -31,5 +31,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          #cname: lotus.nprod.net
+          cname: www.dbgi.org
         
