--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,8 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: The DBGI # Website name
-baseURL: 'www.dbgi.org' # Website URL
+baseURL: 'https://www.dbgi.org' # Website URL
+
 
 ############################
 ## LANGUAGE
