--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,6 @@ main:
   - name: Contact
     url: contact
     weight: 60
-  - name: Courses
+  - name: Research proposal
     url: course
     weight: 70
