--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,12 +16,12 @@ main:
   # - name: Events
   #   url: event
   #   weight: 40
-  - name: Publications
-    url: publication
-    weight: 50
+  # - name: Publications
+  #   url: publication
+  #   weight: 50
   - name: Contact
     url: contact
     weight: 60
-  - name: Research proposal
-    url: course
-    weight: 70
+  # - name: Research proposal
+  #   url: course
+  #   weight: 70
