--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Organization
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'An Open Science initiative to explore and establish robust and scalable workflows for the digitization of chemo- and biodiversity, at the global scale in wild ecosystems.'
+    twitter: 'allard_pm'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -43,7 +43,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: 'This website is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
@@ -65,12 +65,13 @@ features:
     extra_languages:
       - r
       - latex
+      - python
   math:
     enable: false
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/digital-botanical-gardens-initiative/digital-botanical-gardens-initiative.github.io'
     content_dir: content
     branch: main
   avatar:
