--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,9 +22,12 @@ main:
   - name: Contact
     url: contact
     weight: 60
-  - name: Research proposal
-    url: course
-    weight: 70
+  # - name: Research proposal
+  #   url: course
+  #   weight: 70
+  - name: What are we working on now ?
+    url: work-in-progress
+    weight: 80
   # - name: Page
   #   url: page
   #   weight: 70
